[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "classroom-feedback-mediator"
version = "0.2.0"
description = "Interpretable teacher-student feedback mediation API (HAI-Agency @ AIED 2026)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.0.0",
  "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
